# kontu

./: .gitignore  AGENTS.md  README.md  SPEC.md
.github/workflows/: ci.yml
docs/expansion/: dk.md  is.md  no.md  se.md
scripts/: deploy.sh  dev.sh  radar.sh
scripts/nordic/: booli.py  finn.py  kontu-radar.service  kontu-radar.timer  shore.py  visir.py  visir_enrich.py
tui/: Cargo.toml
tui/src/: action.rs  api.rs  app.rs  card.rs  cli.rs  config.rs  country.rs  format.rs  ingest.rs  logging.rs  main.rs  matching.rs  models.rs  probe.rs  render_smoke.rs  risk.rs  spec.rs  telegram.rs  theme.rs  tui.rs  watch.rs
tui/src/cost/: amortization.rs  defaults.rs  jurisdiction.rs  mod.rs  recurring.rs  state.rs  tests.rs
tui/src/ui/: compare.rs  costmodel.rs  detail.rs  filter.rs  list.rs  mod.rs
worker/: fixtures.sql  package-lock.json  package.json  seed.sql  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
worker/migrations/: 0001_init.sql  0002_description.sql  0003_detail_enrichment.sql  0004_kiinteistovero.sql  0005_electricity.sql  0006_published_pages.sql  0007_building_right.sql  0007_country.sql
worker/src/: crawl.ts  db.ts  fairprice.ts  geo.ts  index.ts  normalize.ts  page.ts
worker/src/api/: listings.ts
worker/src/sources/: boligsiden.ts  booli.ts  etuovi.ts  finn.ts  oikotie.ts  visir.ts
worker/test/: db.test.ts  fairprice.test.ts  health.test.ts  normalize.test.ts
