[package]
name = "kontu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
fuzzy-matcher = "0.3.7"
open = "5.3.5"
ratatui = "0.30.2"
ratatui-image = "11.0.5"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "gzip", "rustls", "http2", "charset", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tui-input = "0.15.3"
