[package]
name = "kontu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.32"
open = "5.3.5"
resvg = "0.47.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "gzip", "rustls", "http2", "charset", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = "1.1.2"
